--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -39,3 +39,7 @@ Wiki Zoomer
 AstikorCarts
 Realistic Horse Genetics
 Simple Farming
+Camera Mod
+Gauges and Switches
+Nature's Compass
+SecurityCraft
