--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -43,3 +43,5 @@ waystones:warp_plate
 rats:cauldron
 rats:chef_rat
 rats:gemcutter_rat
+securitycraft:securitycraft_to_vanilla
+securitycraft:vanilla_to_securitycraft
