--- a/config/voicechat/player-volumes.properties
+++ b/config/voicechat/player-volumes.properties
@@ -1,3 +1,4 @@
 #The adjusted volumes for all other players
-#Sat May 29 20:52:26 CEST 2021
+#Fri Jun 25 18:53:37 CEST 2021
+6864eb4a-91d6-4292-8dfb-f398cbd5dc57=1.0
 30b80f6f-f0dc-4b4a-96b2-c37b28494b1b=1.0
