--- a/config/voicechat-client.toml
+++ b/config/voicechat-client.toml
@@ -26,7 +26,7 @@ microphone = ""
 #Empty for default device
 speaker = ""
 #If the microphone is muted (only when using voice activation)
-muted = false
+muted = true
 #If the voice chat is disabled (sound and microphone off)
 disabled = false
 #If the voice chat should use semi 3D stereo sound
