--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ config/voicechat/player-volumes.properties
 optionsshaders.txt
 config/voicechat-client.toml
 config/voicechat/player-volumes.properties
+config/voicechat-client.toml
