--- a/.gitignore
+++ b/.gitignore
@@ -16,17 +16,13 @@ usernamecache.json
 resourcepacks/*
 config/jei/bookmarks.ini
 config/voicechat-client.toml
-config/voicechat-client.toml
 config/voicechat/*
 options.txt
 optionsof.txt
 optionsshader.txt
 config/incontrol/*
 config/fxcontrol/*
-config/voicechat-client.toml
 config/voicechat/player-volumes.properties
 optionsshaders.txt
-config/voicechat-client.toml
-config/voicechat/player-volumes.properties
-config/voicechat-client.toml
 config/craftpresence.properties
+etched-sounds/*
