--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -11,7 +11,6 @@ Immersive Petroleum
 Immersive Posts
 Inspirations
 Macaw's Doors
-Macaw's Roofs
 Macaw's Trapdoors
 Macaw's Windows
 Quark
@@ -47,3 +46,4 @@ Snail Mail
 Aquaculture 2
 ITank
 Etched
+Coins
