--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ config/camera-client.toml
 config/voicechat-client.toml
 .replay_cache/*
 replay_recordings/*
+servers.dat_old
+RunUpdate.bat
+hs_err_pid3544.log
