--- a/config/voicechat-client.toml
+++ b/config/voicechat-client.toml
@@ -28,7 +28,7 @@ speaker = ""
 #If the microphone is muted (only when using voice activation)
 muted = false
 #If the voice chat is disabled (sound and microphone off)
-disabled = true
+disabled = false
 #If the voice chat should use semi 3D stereo sound
 stereo = true
 #If the voice chat icons should be hidden
